add: features for merge w/ abdel karim
